--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcc 'PT'
 - !lcsh 'Love stories'
 - !lcsh 'Man-woman relationships -- Fiction'
+- GITenberg
 title: Ved Vejen
 url: http://www.gutenberg.org/ebooks/13175
